--- a/index.html
+++ b/index.html
@@ -77,15 +77,15 @@
                 <div class="bot">
                     <div class="bot-left">
                         <div class="s_txt">
-                            <p>한국 현대미술 대표 잡지</p>
                             <p>미술인 및 미술 애호가들의 교양 필독서 월간 「PUBLIC ART」</p>
+                            <p>한국 현대미술 대표 잡지</p>
                         </div>
-                        <div>
+                        <div class="r_txt">
                             <div class="img-box">
                                 <img src="./img/about.jpg" alt="">
                                 <div class="deco"></div>
                             </div>
-                            <div class="b_txt">
+                            <div class="txt-box">
                                 <h1>
                                     월간 「PUBLIC ART」는 2006년 10월에 창간한 대중을 위한 현대미술 전문지입니다.<br>
                                     현대미술 전반에 걸친 다양한 이슈와 콘텐츠를 다루고 담론을 생성하며 난해한 텍스트 위주에서 탈피해<br>
@@ -141,6 +141,9 @@
                     </div>
                 </div>
             </div>
+        </section>
+        <section class="section section02">
+            
         </section>
     </div>
     <script src="./style.js"></script>
