--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     </div>
                     <div class="b_tit">
                         <div class="txt">
-                            <h1>
+                            <h1 class="b_comm">
                                 <span>p</span>
                                 <span>u</span>
                                 <span>b</span>
@@ -57,7 +57,7 @@
                                 <span>r</span>
                                 <span>t</span>
                             </h1>
-                            <h1>
+                            <h1 class="b_comm">
                                 <span>i</span>
                                 <span>n</span>
                                 <span>f</span>
@@ -88,10 +88,10 @@
                             <div class="txt-box">
                                 <h1>
                                     월간 「PUBLIC ART」는 2006년 10월에 창간한 대중을 위한 현대미술 전문지입니다.<br>
-                                    현대미술 전반에 걸친 다양한 이슈와 콘텐츠를 다루고 담론을 생성하며 난해한 텍스트 위주에서 탈피해<br>
-                                    필자의 다양화를 통한 지식과 정보의 공유 폭을 확대하고<br>
+                                    현대미술 전반에 걸친 다양한 이슈와 콘텐츠를 다루고 담론을 생성하며 난해한 텍스트 위주에서 탈피해
+                                    필자의 다양화를 통한 지식과 정보의 공유 폭을 확대하고,
                                     타 매체와의 변별성 유지를 위해 콘텐츠, 비주얼 아이템 차별화를 지향해오고 있습니다.<br>
-                                    공공성, 예술성, 전문성, 대중성을 모토로 현대미술을 통해 독자들과 교감하고 다채롭게 시각예술을<br> 
+                                    공공성, 예술성, 전문성, 대중성을 모토로 현대미술을 통해 독자들과 교감하고 다채롭게 시각예술을 
                                     다루어 한국 현대미술의 대중화 실현에 앞장서겠습니다. 
                                 </h1>
                             </div>
@@ -143,7 +143,100 @@
             </div>
         </section>
         <section class="section section02">
-            
+            <div class="section02-inner">
+                <div class="top">
+                    <div class="top-left">
+                        <div class="deco"></div>
+                        <div class="con-box">
+                            <h1 class="b_comm">FEATURES</h1>
+                            <div class="txt">
+                                <div>
+                                    <span class="s_comm">SPECIAL FEATURE</span>
+                                    <h1 class="m_comm">미술은행</h1>
+                                    <p>
+                                        미술은행이 올해로 설립 18주년을 맞았다. 지난 2005년 미술시장 활성화와 미술문화 대중화를 위시해<br>
+                                        처음 도입된 제도는 현재 4,200여 점의 소장품을 바탕으로 국가기관, 지역 문화예술기관, 기업 등에<br> 
+                                        이를 대여 및 전시하고 있다. 하지만 정작 우리는 미술은행 제도에 관해 얼마나 알고, 무슨 혜택을 누리고 있나.
+                                    </p>
+                                </div>
+                                <img src="./img/182578c377336e853174fd11bcc156451.png" alt="">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="top-right">
+                        <div class="deco"></div>
+                    </div>
+                </div>
+                <div class="bot">
+                    <div class="bot-left">
+                        <div class="con-box">
+                            <div class="txt">
+                                <div class="deco"></div>
+                                <div>
+                                    <span class="s_comm">PUBLIC & TECH</span>
+                                    <h1 class="m_comm">무제의 비밀</h1>
+                                    <p>
+                                        제목은 조형 의지를 표상하는 ‘상징적’ 기호다. 또한 제목은 관람객에게 작품의 의미를 전달하는 표시물이기도 하다.<br> 
+                                        무제일지라도 ‘표시물’인 한 제목은 이차적 ‘지향구조’를 가진다. 제목은 본래 내외로 ‘관계적’인 것이기 때문이다.
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="img-box">
+                                <img src="./img/a40c8485afeaa40ad8b71613eaf7586d1.png" alt="">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="bot-right"></div>
+                </div>
+            </div>
+        </section>
+        <section class="section section03">
+            <div class="section03-inner">
+                <div class="top">
+                    <div class="top-left">
+                        <div class="border-box"></div>
+                        <div class="semicircle"></div>
+                        <h1 class="b_comm">
+                            <p>
+                                <span>e</span>
+                                <span>x</span>
+                            </p>
+                            <p>
+                                <span>h</span>
+                                <span>i</span>
+                                <span>v</span>
+                                <span>i</span>
+                                <span>s</span>
+                                <span>i</span>
+                                <span>o</span>
+                                <span>n</span>
+                            </p>
+                        </h1>
+                    </div>
+                    <div class="top-right">
+                        <div class="con-box">
+                            <div class="con01 con">
+                                <div class="txt">
+                                    <h1 class="m_comm">"우리가 폭풍이다"</h1>
+                                    <p>
+                                        인간과 역사에 대한 근원적 성찰이 다시금 화두로 떠오른 가운데 현재 프랑스, 파리에 위치한 피노 컬렉션 - 부르스 드 코메레스(Pinault Collection - Bourse de Commerce)에서는 이 같은 문제의식을 담은 <폭풍이 오기 전에(Avant I’Orage)>전을 진행 중이다.
+                                    </p>
+                                </div>
+                                <div class="img-box"><img src="./img/c591abaca257cb6744f3bdbc78e879531.png" alt=""></div>
+                            </div>
+                            <div class="con02 con">
+                                <div class="txt">
+                                    <h1 class="m_comm">2023 물, 불, 몸</h1>
+                                    <p>
+                                        너무 빠르게 달려가는 사회. 이곳에서 변하지 않는 본질이라는 게 있을까? 대구미술관의 ‘대구포럼’ 일환으로 개최된 전시는 미술에 존재하는 근원적인 미와 가치, 그 정신을 탐구하고 세상을 이루는 만물의 근원 중 물과 불 그리고 인간의 몸이 관계하는 미술의 면면을 들여다본다.
+                                    </p>
+                                </div>
+                                <div class="img-box"><img src="./img/copy-1674912035-4-11.png" alt=""></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
     </div>
     <script src="./style.js"></script>
