--- a/index.html
+++ b/index.html
@@ -236,6 +236,38 @@
                         </div>
                     </div>
                 </div>
+                <div class="bot">
+                    <div class="bot-left">
+                        <div class="img-box"><img src="./img/1-21.png" alt=""></div>
+                        <div class="con-box">
+                            <div class="txt">
+                                <h1 class="m_comm">&lt;Resonance-23-1&gt; 2023</h1>
+                                <div class="line"></div>
+                                <p>파시지안은 빛의 굴절로 이뤄진 공간성을 살피며 대표적인 ‘구(Shperes)’ 연작을 선보인다. 부유하는 형상이 밝게 채색된 구형 조각에 스며드는 빛과 반사면, 내부에 주조된 형태의 상호 작용으로 발생한 왜곡, 환영, 프리즘을 보여준다. 에폭시, 플라스틱, 레진 등 산업 재료를 혁신적으로 응용한 그의 작품은 반투명 표면 위로 여과된 빛이 머금는 이미지를 드러낸다.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="bot-right">
+                        <div class="border-box"></div>
+                        <div class="semicircle"></div>
+                        <ul>
+                            <li><a href="">Art Log</a></li>
+                            <li><a href="">Art World</a></li>
+                            <li><a href="">Preview</a></li>
+                            <li><a href="">Review</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="section section04">
+            <div class="section04-inner">
+                <div class="top">
+                    <div class="fir">
+                        <div class="deco"></div>
+                        <div class="line"></div>
+                    </div>
+                </div>
             </div>
         </section>
     </div>
