--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Public Art</title>
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"/>
 </head>
 <body>
     <header class="at-header">
@@ -263,14 +264,153 @@
         <section class="section section04">
             <div class="section04-inner">
                 <div class="top">
-                    <div class="fir">
+                    <div class="top-top">
                         <div class="deco"></div>
                         <div class="line"></div>
+                    </div>
+                    <div class="top-bot">
+                        <div class="top-bot-left">
+                            <div class="deco"></div>
+                            <h1 class="b_comm">ARTISTS</h1>
+                        </div>
+                        <div class="top-bot-right">
+                            <div class="deco deco_01"></div>
+                            <div class="deco deco_02"></div>
+                            <div class="deco deco_03"></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="bot">
+                    <div class="deco"><span></span></div>
+                    <div class="swiper-container artist-swap" data-swiper-parallax="1000">
+                        <div class="swiper-wrapper">
+                            <div class="swiper-slide">
+                                <div class="img-box">
+                                    <div class="img-crop" data-swiper-parallax="300">
+                                        <div class="b_box"></div>
+                                        <div class="line-box"></div>
+                                        <div class="b_box"></div>
+                                        <div class="line-box"></div>
+                                        <div class="b_box"></div>
+                                        <div class="line-box"></div>
+                                        <div class="b_box"></div>
+                                        <div class="line-box"></div>
+                                        <div class="b_box"></div>
+                                        <div class="line-box"></div>
+                                    </div>
+                                    <img src="./img/ca0ad8cfb8ea42ff7f60bebabe7f9fa51.png" alt="" data-swiper-parallax="300">
+                                </div>
+                                <div class="con-box">
+                                    <div class="con-box-top" data-swiper-parallax="300">
+                                        <div class="txt" data-swiper-parallax-x="-150" data-swiper-parallax-duration="1000">
+                                            <p class="m_comm">함경아</p>
+                                            <span class="s_comm">Ham Kyungah</span>
+                                        </div>
+                                    </div>
+                                    <div class="con-box-bot" data-swiper-parallax="400">
+                                        <div class="txt" data-swiper-parallax-x="-150" data-swiper-parallax-duration="1000">
+                                            <p>가상으로의 통로</p>
+                                            <span>'당신이 보는 것은 보이지 않는 것이다 / 다섯 도시를 위한 샹들리에'</span>
+                                        </div>
+                                        <div class="img-box">
+                                            <img src="./img/1dc5f2067777ff0bd6167c26974213e61.png" alt="" data-swiper-parallax="-500">
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="swiper-slide">
+                                <div class="img-box">
+                                    <div class="img-crop" data-swiper-parallax="300">
+                                        <div class="b_box"></div>
+                                        <div class="line-box"></div>
+                                        <div class="b_box"></div>
+                                        <div class="line-box"></div>
+                                        <div class="b_box"></div>
+                                        <div class="line-box"></div>
+                                        <div class="b_box"></div>
+                                        <div class="line-box"></div>
+                                        <div class="b_box"></div>
+                                        <div class="line-box"></div>
+                                    </div>
+                                    <img src="./img/496b0110f03b06f29173adf1131cbbad1.png" alt="" data-swiper-parallax="300">
+                                </div>
+                                <div class="con-box">
+                                    <div class="con-box-top" data-swiper-parallax="300">
+                                        <div class="txt" data-swiper-parallax-x="-150" data-swiper-parallax-duration="1000">
+                                            <p class="m_comm">프루던스 플린트</p>
+                                            <span class="s_comm">Prudence Flint</span>
+                                        </div>
+                                    </div>
+                                    <div class="con-box-bot" data-swiper-parallax="400">
+                                        <div class="txt" data-swiper-parallax-x="-150" data-swiper-parallax-duration="1000">
+                                            <p>방 안으로의 멜랑콜리</p>
+                                            <span>Exhibition view of 'Conditions for Sprouting Seeds' at Fine Arts, Sydney 2022 Courtesy of the artist and Fine Arts, Sydney</span>
+                                        </div>
+                                        <div class="img-box">
+                                            <img src="./img/148ae5c3e3f9abe5d0ae387b1b883f751.png" alt="" data-swiper-parallax="-500">
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="swiper-slide">
+                                <div class="img-box">
+                                    <div class="img-crop" data-swiper-parallax="300">
+                                        <div class="b_box"></div>
+                                        <div class="line-box"></div>
+                                        <div class="b_box"></div>
+                                        <div class="line-box"></div>
+                                        <div class="b_box"></div>
+                                        <div class="line-box"></div>
+                                        <div class="b_box"></div>
+                                        <div class="line-box"></div>
+                                        <div class="b_box"></div>
+                                        <div class="line-box"></div>
+                                    </div>
+                                    <img src="./img/57e586bef6d3b89511ed80ca467ac9af1.png" alt="" data-swiper-parallax="300">
+                                </div>
+                                <div class="con-box">
+                                    <div class="con-box-top" data-swiper-parallax="300">
+                                        <div class="txt" data-swiper-parallax-x="-150" data-swiper-parallax-duration="1000">
+                                            <p class="m_comm">정희민</p>
+                                            <span class="s_comm">Chung Heemin</span>
+                                        </div>
+                                    </div>
+                                    <div class="con-box-bot" data-swiper-parallax="400">
+                                        <div class="txt" data-swiper-parallax-x="-150" data-swiper-parallax-duration="1000">
+                                            <p>정희민의 그림 물질을 더듬어 회화를 다듬기</p>
+                                            <span>[V8] 전시 전경 2022 N/A</span>
+                                        </div>
+                                        <div class="img-box">
+                                            <img src="./img/cf38450260522a86684bbb94646b13961.png" alt="" data-swiper-parallax="-500">
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="arrow">
+                            <div class="swiper-button-prev"><span></span></div>
+                            <div class="swiper-button-next"><span></span></div>
+                        </div>
                     </div>
                 </div>
             </div>
         </section>
     </div>
     <script src="./style.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
+    <script>
+        var swiper = new Swiper('.artist-swap', {
+            slidesPerView:'1',
+            speed:'1000',
+            loop:true,
+            parallax:true,
+            effect:'fade',
+            navigation:{
+                prevEl:'.swiper-button-prev',
+                nextEl:'.swiper-button-next',
+            },
+            grabCursor:true,
+        });
+    </script>
 </body>
 </html>
