--- a/index.html
+++ b/index.html
@@ -395,6 +395,34 @@
                 </div>
             </div>
         </section>
+        <section class="section section05">
+            <div class="section05-inner">
+                <div class="all-menu">
+                    <ul class="am-ul">
+                        <li class="am-li"><a href="">Currnt Issue</a></li>
+                        <li class="am-li"><a href="">Features</a></li>
+                        <li class="am-li"><a href="">Artists</a></li>
+                        <li class="am-li"><a href="">Exhibitions</a></li>
+                        <li class="am-li"><a href="">Key Work</a></li>
+                        <li class="am-li"><a href="">Shop</a></li>
+                        <li class="am-li"><a href="">Subscribe</a></li>
+                    </ul>
+                    <ul class="am-ul">
+                        <li class="am-li"><a href="">About</a></li>
+                        <li class="am-li"><a href="">New Hero</a></li>
+                        <li class="am-li"><a href="">Newsletter</a></li>
+                        <li class="am-li"><a href="">Notice</a></li>
+                        <li class="am-li"><a href="">Q&A</a></li>
+                        <li class="am-li"><a href="">Contact</a></li>
+                        <li class="am-li"><a href="">Advertising</a></li>
+                    </ul>
+                </div>
+                <div class="circle-box">
+                    <div class="mid-circle"><img src="./img/Ellipse11.png" alt=""></div>
+                    <div class="move-circle"></div>
+                </div>
+            </div>
+        </section>
     </div>
     <script src="./style.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
